# AnimeTime

./: .gitignore  LICENSE  README.md  animetime.py  at_test.py  main_anime.py  main_discordbot.py  mod_anime.py  pyproject.toml
animetime/classes/: anime.py  episode.py  season.py
animetime/common/: database.py  instances.py
animetime/tests/: test_classes.py  test_instances.py
src/animetime/: animetime.py
