[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "/dist",
  "/.git",
  ".gitignore"
  ]

[project]
name = "animetime"
version = "0.1.6"
authors = [
 {name="swarthur", email=""}
]
description = "A module to manage and track your favourites animes and series"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["animedata","tomli"]

[project.urls]
"Github" = "https://github.com/swarthur/animetime"
"Bug" = "https://github.com/swarthur/animetime/issues"
